--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
             <nav class="mobileMenu">
               <ul>
-                <li><a href="">Home </a></li>
-                <li><a href="">About Us </a></li>
-                <li><a href="">Services </a></li>
-                <li><a href="">Pricing </a></li>
-                <li><a href="">Portfolio </a></li>
-                <li><a href="">Contact Us </a></li>
+                <li><a href="index.html">Home </a></li>
+                <li><a href="#about">About Us </a></li>
+                <li><a href="#services">Services </a></li>
+                <li><a href="#pricing">Pricing </a></li>
+                <li><a href="#portfolio">Portfolio </a></li>
+                <li><a href="#contact">Contact Us </a></li>
               </ul>
             </nav>
             <div class="mobileRight"><a href="#">Hire Us!</a></div>
@@ -46,6 +46,15 @@
               balance that sparks the extraordinary
             </p>
             <a href="#">Discover Our Magic</a>
+
+            <div class="scrollMouse" data-target="#about">
+              <img
+                src="assets/img/Mouse.png"
+                alt="scrollMouse"
+                width=""
+                height=""
+              />
+            </div>
           </div>
         </div>
         <div class="objects">
@@ -73,7 +82,7 @@
       </section>
       <!-- HERO BANNER END-->
       <!-- ABOUT US  START-->
-      <section class="container">
+      <section class="container" id="about">
         <div class="aboutUs">
           <div class="img">
             <img src="assets/img/abt-shape.png" alt="shape" />
@@ -216,7 +225,7 @@
       </section>
       <!-- ABOUT US END -->
       <!-- OUR SERVICES START -->
-      <section class="container">
+      <section class="container" id="services">
         <div class="ourServices">
           <span class="subText">Our Services</span>
           <h2>
