--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
             </article>
             <div class="inner">
               <p>Fill out the form below and we'll get back to you shortly</p>
-              <p><img src="assets/img/filter.png" alt="" /> Filters</p>
+              <p><img src="assets/img/filter.png" alt="" style="margin-right: 8px;"/> Filters</p>
 
               <form class="form-container" onsubmit="handleSubmit(event)">
                 <div class="form-section">
