--- a/index.html
+++ b/index.html
@@ -402,12 +402,12 @@
                   </p>
                 </div>
                 <ul class="features">
-                  <li>150 Esdfadfa3ewe</li>
-                  <li>5 Esdfadfa3ewe</li>
-                  <li>2 GB Esdfadfa3ewe</li>
+                  <li><b>150</b> Esdfadfa3ewe</li>
+                  <li><b>5</b> Esdfadfa3ewe</li>
+                  <li><b>2 GB</b> Esdfadfa3ewe</li>
                   <li><strong>500 GB</strong> Esdfadfa3ewe</li>
-                  <li>2 Esdfadfa3ewe</li>
-                  <li>6 Esdfadfa3ewe</li>
+                  <li><b>2</b> Esdfadfa3ewe</li>
+                  <li><b>6</b> Esdfadfa3ewe</li>
                 </ul>
                 <div class="selectPlan">
                   <button>SELECT PLAN</button>
@@ -438,12 +438,12 @@
                   </p>
                 </div>
                 <ul class="features">
-                  <li>150 Esdfadfa3ewe</li>
-                  <li>5 Esdfadfa3ewe</li>
+                  <li><b>150</b> Esdfadfa3ewe</li>
+                  <li><b>5</b> Esdfadfa3ewe</li>
                   <li><strong>2 GB</strong> Esdfadfa3ewe</li>
                   <li><strong>500 GB</strong> Esdfadfa3ewe</li>
-                  <li>2 Esdfadfa3ewe</li>
-                  <li>6 Esdfadfa3ewe</li>
+                  <li><b>2</b> Esdfadfa3ewe</li>
+                  <li><b>6</b> Esdfadfa3ewe</li>
                 </ul>
                 <div class="mostPopular">
                   <a class="" href="#">Most Popular</a>
@@ -472,12 +472,12 @@
                   </p>
                 </div>
                 <ul class="features">
-                  <li>150 Esdfadfa3ewe</li>
-                  <li>5 Esdfadfa3ewe</li>
-                  <li>2 GB Esdfadfa3ewe</li>
+                  <li><b>150</b> Esdfadfa3ewe</li>
+                  <li><b>5</b> Esdfadfa3ewe</li>
+                  <li><b>2 GB</b> Esdfadfa3ewe</li>
                   <li><strong>500 GB</strong> Esdfadfa3ewe</li>
-                  <li>2 Esdfadfa3ewe</li>
-                  <li>6 Esdfadfa3ewe</li>
+                  <li><b>2</b> Esdfadfa3ewe</li>
+                  <li><b>6</b> Esdfadfa3ewe</li>
                 </ul>
                 <div class="selectPlan">
                   <button>SELECT PLAN</button>
@@ -610,7 +610,14 @@
             </article>
             <div class="inner">
               <p>Fill out the form below and we'll get back to you shortly</p>
-              <p><img src="assets/img/filter.png" alt="" style="margin-right: 8px;"/> Filters</p>
+              <p>
+                <img
+                  src="assets/img/filter.png"
+                  alt=""
+                  style="margin-right: 8px"
+                />
+                Filters
+              </p>
 
               <form class="form-container" onsubmit="handleSubmit(event)">
                 <div class="form-section">
