--- a/index.html
+++ b/index.html
@@ -416,6 +416,114 @@
               Choose the package that<br />
               suits your needs
             </p>
+            <!---desktopPlans--->
+
+            <div class="pricing-container desktopPlans">
+              <!-- SILVER PLAN -->
+              <div class="plan silver">
+                <div class="firstSec">
+                  <div>
+                    <h2>SILVER</h2>
+                    <p class="description">
+                      Perfect for startups or<br />
+                      personal projects.
+                    </p>
+                  </div>
+                  <img src="assets/img/silver.png" alt="silver" />
+                </div>
+                <div class="price">
+                  <p>
+                    <span class="currency">$</span>
+                    <span class="amount">2,500</span>
+                    <span class="unit">USD</span>
+                  </p>
+                </div>
+                <ul class="features">
+                  <li><b>150</b> Esdfadfa3ewe</li>
+                  <li><b>5</b> Esdfadfa3ewe</li>
+                  <li><b>2 GB</b> Esdfadfa3ewe</li>
+                  <li><strong>500 GB</strong> Esdfadfa3ewe</li>
+                  <li><b>2</b> Esdfadfa3ewe</li>
+                  <li><b>6</b> Esdfadfa3ewe</li>
+                </ul>
+                <div class="selectPlan">
+                  <button>SELECT PLAN</button>
+                </div>
+              </div>
+              <!-- DIAMOND PLAN -->
+              <div class="plan diamond">
+                <div class="firstSec">
+                  <div>
+                    <h2>DIAMOND</h2>
+                    <p class="description">
+                      Ideal for small to medium<br />
+                      sized businesses.
+                    </p>
+                  </div>
+                  <img
+                    src="assets/img/diamond.png"
+                    alt="diamond"
+                    width="auto"
+                  />
+                </div>
+
+                <div class="price">
+                  <p>
+                    <span class="currency">$</span>
+                    <span class="amount">7,500</span>
+                    <span class="unit">USD</span>
+                  </p>
+                </div>
+                <ul class="features">
+                  <li><b>150</b> Esdfadfa3ewe</li>
+                  <li><b>5</b> Esdfadfa3ewe</li>
+                  <li><strong>2 GB</strong> Esdfadfa3ewe</li>
+                  <li><strong>500 GB</strong> Esdfadfa3ewe</li>
+                  <li><b>2</b> Esdfadfa3ewe</li>
+                  <li><b>6</b> Esdfadfa3ewe</li>
+                </ul>
+                <div class="mostPopular">
+                  <a class="" href="#">Most Popular</a>
+                </div>
+                <div class="selectPlan">
+                  <button>SELECT PLAN</button>
+                </div>
+              </div>
+              <!-- GOLD PLAN -->
+              <div class="plan gold">
+                <div class="firstSec">
+                  <div>
+                    <h2>GOLD</h2>
+                    <p class="description">
+                      Best for large, feature<br />
+                      rich websites
+                    </p>
+                  </div>
+                  <img src="assets/img/gold.png" alt="gold" />
+                </div>
+                <div class="price">
+                  <p>
+                    <span class="currency">$</span>
+                    <span class="amount">15,000</span>
+                    <span class="unit">USD</span>
+                  </p>
+                </div>
+                <ul class="features">
+                  <li><b>150</b> Esdfadfa3ewe</li>
+                  <li><b>5</b> Esdfadfa3ewe</li>
+                  <li><b>2 GB</b> Esdfadfa3ewe</li>
+                  <li><strong>500 GB</strong> Esdfadfa3ewe</li>
+                  <li><b>2</b> Esdfadfa3ewe</li>
+                  <li><b>6</b> Esdfadfa3ewe</li>
+                </ul>
+                <div class="selectPlan">
+                  <button>SELECT PLAN</button>
+                </div>
+              </div>
+            </div>
+
+            <!---MOBILE--->
+
             <div class="mobilePlanSelector" id="mobilePlanSelector">
               <select id="planSelector">
                 <option value="silver" selected>Silver</option>
@@ -424,9 +532,9 @@
               </select>
             </div>
 
-            <div class="pricing-container">
+            <div class="pricing-container mobilePlans">
               <!-- SILVER PLAN -->
-              <div class="plan silver">
+              <div class="plan silver active">
                 <div class="firstSec">
                   <div>
                     <h2>SILVER</h2>
