--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
             <div class="pricing-container mobilePlans">
               <!-- SILVER PLAN -->
-              <div class="plan silver active">
+              <div class="plan silver">
                 <div class="firstSec">
                   <div>
                     <h2>SILVER</h2>
