pixelable mobile done

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
       <section class="heroBanner">
         <div class="container">
           <header>
-            <button id="menuToggle" class="hamburger" aria-label="Toggle menu">
-              &#9776;
-            </button>
-
+            <button
+              id="menuToggle"
+              class="hamburger"
+              aria-label="Toggle menu"
+            ></button>
             <a href="/" class="logo"
               ><img src="assets/img/logo.svg" alt="logo"
             /></a>
