--- a/index.html
+++ b/index.html
@@ -102,9 +102,11 @@
               We are a creative web design agency with over a decade of
               experience. Whether you’re a startup, a growing business, or an
               established brand, we tailor our solutions to help you thrive in
-              the digital world. Our team of designers, developers, and
-              strategists are passionate about turning ideas into digital
-              realities.
+              the digital world.
+              <span
+                >Our team of designers, developers, and strategists are
+                passionate about turning ideas into digital realities.</span
+              >
               <!-- From sleek landing pages to robust e-commerce
               platforms, we build websites that don’t just look great — they
               perform. -->
