--- a/index.html
+++ b/index.html
@@ -693,8 +693,14 @@
               </h2>
               <img src="assets/img/pixelportfolio.png" alt="Portfolio" />
               <h3>
-                Every pixel you see <br />here is backed by<br />
-                strategy, passion, <br />and purpose
+                <span class="desktop">
+                  Every pixel you see <br />here is backed by<br />
+                  strategy, passion, <br />and purpose
+                </span>
+
+                <span class="mob">
+                  Behind every pixel thought, passion, and precision
+                </span>
               </h3>
             </div>
             <div class="portfolio">
@@ -739,7 +745,13 @@
                     width=""
                   />
                   <img
-                    src="assets/img/port7.png"
+                    src="assets/img/port7-1.png"
+                    alt="Portfolio"
+                    class="project"
+                    width=""
+                  />
+                  <img
+                    src="assets/img/port7-2.png"
                     alt="Portfolio"
                     class="project"
                     width=""
@@ -770,7 +782,9 @@
           </div>
         </div>
       </section>
-      <div class="container-fluid btm"></div>
+      <div class="container-fluid">
+        <div class="btm"></div>
+      </div>
       <!-- WORK END -->
       <!-- CONTACT US START -->
       <section class="container">
@@ -783,7 +797,7 @@
           <div class="form">
             <article>
               <h3>
-                Let's build something great together, reach out now and let us
+                Let's build something great together, reach out now & let us
                 make it happen
               </h3>
 
