--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               aria-label="Toggle menu"
             ></button>
             <a href="/" class="logo"
-              ><img src="assets/img/logo.svg" alt="logo"
+              ><img src="assets/img/Pixelable_Logo.png" width="184" alt="logo"
             /></a>
 
             <nav class="mobileMenu">
@@ -968,7 +968,7 @@
         <p class="copyright">Copyright © 2025</p>
         <div>
           <a href="/">
-            <img src="assets/img/Pixelable_Logo.png" width="80%" alt="logo" />
+            <img src="assets/img/Pixelable_Logo.png" width="200px" alt="logo" />
           </a>
           <p>Dream.Design.Deliver</p>
           <ul>
