--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             <img src="assets/img/boat-animate.gif" alt="boat" />
             <p class="mob">
               <b>Sailing your way, </b>
-              No hidden fees lurking <br />beneath the surface.
+              No hidden <br />fees lurking beneath the surface.
             </p>
           </div>
           <div class="pricingTable">
@@ -702,7 +702,8 @@
                 </span>
 
                 <span class="mob">
-                  Behind every pixel thought, passion, and precision
+                  Behind every pixel thought, passion,<br />
+                  and precision
                 </span>
               </h3>
             </div>
