--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@
 
     <!-- GSAP ScrollTrigger Plugin --->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script async src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <!-- <script async src="https://cdn.emailjs.com/dist/email.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
