--- a/index.html
+++ b/index.html
@@ -17,32 +17,35 @@
     <title>Pixelable</title>
   </head>
   <body>
+    <header>
+      <div class="parent">
+        <button
+          id="menuToggle"
+          class="hamburger"
+          aria-label="Toggle menu"
+        ></button>
+        <a href="/" class="logo"
+          ><img src="assets/img/Pixelable_Logo.png" width="184" alt="logo"
+        /></a>
+
+        <nav class="mobileMenu">
+          <ul>
+            <li><a href="#home">Home </a></li>
+            <li><a href="#about">About Us </a></li>
+            <li><a href="#services">Services </a></li>
+            <li><a href="#pricing">Pricing </a></li>
+            <li><a href="#portfolio">Portfolio </a></li>
+            <li><a href="#contact">Contact Us </a></li>
+            <li class="forMob"><a href="#contact">Hire Us! </a></li>
+          </ul>
+        </nav>
+        <div class="mobileRight"><a href="#contact">Hire Us!</a></div>
+      </div>
+    </header>
     <main>
       <!-- HERO BANNER START-->
       <section class="heroBanner" id="home">
         <div class="container">
-          <header>
-            <button
-              id="menuToggle"
-              class="hamburger"
-              aria-label="Toggle menu"
-            ></button>
-            <a href="/" class="logo"
-              ><img src="assets/img/Pixelable_Logo.png" width="184" alt="logo"
-            /></a>
-
-            <nav class="mobileMenu">
-              <ul>
-                <li><a href="#home">Home </a></li>
-                <li><a href="#about">About Us </a></li>
-                <li><a href="#services">Services </a></li>
-                <li><a href="#pricing">Pricing </a></li>
-                <li><a href="#portfolio">Portfolio </a></li>
-                <li><a href="#contact">Contact Us </a></li>
-              </ul>
-            </nav>
-            <div class="mobileRight"><a href="#contact">Hire Us!</a></div>
-          </header>
           <div class="heroBannerContent">
             <h1>We Are A Creative design Agency</h1>
             <p>
